[tool.poetry]
name = "glove-tensorflow"
version = "0.1.0"
description = ""
authors = ["yuxuan.tay <wyextay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pandas = "^1.1.5"
python-json-logger = "^2.0.2"
requests = "^2.28.0"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
bandit = "*"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"
jupyterlab = "*"
mypy = "*"
poetry = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
